Service interception was changed. Return result after exception throwing feature was added. API changed.